--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,19 @@
 name: Build and deploy to IBM Cloud Foundry
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
 # Environment variables available to all jobs and steps in this workflow
 env:
-  IBM_CLOUD_REGION: us-south
+  IBM_CLOUD_REGION: eu-gb
   IBM_CLOUD_GROUP: default
-  IBM_CLOUD_SPACE: dev
-  IBM_CLOUD_ORG: garnickgg@gmail.com
+  IBM_CLOUD_SPACE: dev-uk
+  IBM_CLOUD_ORG: ulidder@us.ibm.com
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.IBM_CLOUD_API_KEY}}
+  CI: false
 
 defaults:
   run:
